serverlist widget changes. More cleaner with buttons to connect

--- a/prust.html
+++ b/prust.html
@@ -158,29 +158,64 @@
         <h4 style="color: #ce422b;">Join our <a style="color: #7289DA;">Discord</a></h4>
         </div>
         <iframe src="https://beta.diswidgets.org/widgets/ZxfvPjlhmuItdhAgji" width="500" height="750" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-  
-  </div>
-    </center><br><br><br><br><br>
-
-    <div id="serverList">
-      <center>
-          <h4 style="color: #ce422b;">Our Rust <a style="color: #fafafa;">Servers</a></h4><br><br>
-            <h4><a style="color: #ce422b;">US Servers</a></h4>
-            <img loading="lazy" src="https://cache.gametracker.com/server_info/172.93.101.33:28015/b_560_95_1.png" alt="" width="560" height="95" border="0">&nbsp;&nbsp;
-            <img loading="lazy" src="https://cache.gametracker.com/server_info/us-2x.planet-rust.com:28015/b_560_95_1.png" alt="" width="560" height="95" border="0">&nbsp;&nbsp;<br><br>
-            <img loading="lazy" src="https://cache.gametracker.com/server_info/209.222.101.104:28015/b_560_95_1.png" alt="" width="560" height="95" border="0">&nbsp;&nbsp;
-            <img loading="lazy" src="https://cache.gametracker.com/server_info/172.93.101.33:29015/b_560_95_1.png" alt="" width="560" height="95" border="0">&nbsp;&nbsp;<br><br>
-            <img loading="lazy" src="https://cache.gametracker.com/server_info/us-3x.planet-rust.com:28015/b_560_95_1.png" alt="" width="560" height="95" border="0">
-
-      </center>
-      <br><br><br>
-      <center>
-          <h4><a style="color: #ce422b;">EU Servers</a></h4>
-          <img loading="lazy" src="https://cache.gametracker.com/server_info/109.238.14.221:28015/b_560_95_1.png" alt="" width="560" height="95" border="0">&nbsp;&nbsp;
-          <img loading="lazy" src="https://cache.gametracker.com/server_info/eu-2x.planet-rust.com:28015/b_560_95_1.png" alt="" width="560" height="95" border="0">&nbsp;&nbsp;<br><br>
-          <img loading="lazy" src="https://cache.gametracker.com/server_info/109.238.14.201:28015/b_560_95_1.png" alt="" width="560" height="95" border="0">&nbsp;&nbsp;
-          <img loading="lazy" src="https://cache.gametracker.com/server_info/109.238.14.221:29015/b_560_95_1.png" alt="" width="560" height="95" border="0">&nbsp;&nbsp;
+      </div>
     </center>
+    <br><br><br>
+    <center>
+        <hr style="height:2px;width:35rem;border-width:0;color:#fafafa;background-color:#fafafa"><br>
+        <h4 style="color: #ce422b;">Our Rust <a style="color: #fafafa;">Servers</a></h4><br>
+        <hr style="height:2px;width:25rem;border-width:0;color:#fafafa;background-color:#fafafa"><br>
+      </center>
+    <div id="serverList">
+    <div class="usserverList">
+        <center>
+          <h4 style="color: #fafafa;"><a style="color: #ce422b;">US</a >&nbsp;Servers</h4>
+            <hr style="height:2px;width:35rem;border-width:0;color:#fafafa;background-color:#fafafa"><br>
+            <img loading="lazy" src="https://cache.gametracker.com/server_info/172.93.101.33:28015/b_560_95_1.png" alt="" width="560" height="95" border="0">&nbsp;<br><br>
+            <a href="steam://connect/us-grid.planet-rust.com:28015"  class="btn btn-outline-dark" style="width: auto;"><i class="fas fa-network-wired"></i>&nbsp;Connect</a><br>
+            <hr style="height:2px;width:35rem;border-width:0;color:#fafafa;background-color:#fafafa">
+      <br>
+            <img loading="lazy" src="https://cache.gametracker.com/server_info/us-2x.planet-rust.com:28015/b_560_95_1.png" alt="" width="560" height="95" border="0">&nbsp;<br><br>
+            <a href="steam://connect/us-2x.planet-rust.com:28015"  class="btn btn-outline-dark" style="width: auto;"><i class="fas fa-network-wired"></i>&nbsp;Connect</a><br>
+            <hr style="height:2px;width:35rem;border-width:0;color:#fafafa;background-color:#fafafa">
+      <br>
+            <img loading="lazy" src="https://cache.gametracker.com/server_info/209.222.101.104:28015/b_560_95_1.png" alt="" width="560" height="95" border="0">&nbsp;<br><br>
+            <a href="steam://connect/us-10x.planet-rust.com:28015"  class="btn btn-outline-dark" style="width: auto;"><i class="fas fa-network-wired"></i>&nbsp;Connect</a><br>
+            <hr style="height:2px;width:35rem;border-width:0;color:#fafafa;background-color:#fafafa">
+      <br>
+            <img loading="lazy" src="https://cache.gametracker.com/server_info/172.93.101.33:29015/b_560_95_1.png" alt="" width="560" height="95" border="0">&nbsp;<br><br>
+            <a href="steam://connect/us-grid.planet-rust.com:29015"  class="btn btn-outline-dark" style="width: auto;"><i class="fas fa-network-wired"></i>&nbsp;Connect</a><br>
+            <hr style="height:2px;width:35rem;border-width:0;color:#fafafa;background-color:#fafafa">
+      <br>
+            <img loading="lazy" src="https://cache.gametracker.com/server_info/us-3x.planet-rust.com:28015/b_560_95_1.png" alt="" width="560" height="95" border="0">&nbsp;<br><br>
+            <a href="steam://connect/us-3x.planet-rust.com:28015"  class="btn btn-outline-dark" style="width: auto;" ><i class="fas fa-network-wired"></i>&nbsp;Connect</a><br>
+            <hr style="height:2px;width:35rem;border-width:0;color:#fafafa;background-color:#fafafa">
+      <br>
+        </center>
+      </div>
+      <div id="euserverList">
+        
+        <center>
+          <h4 style="color: #fafafa;"><a style="color: #ce422b;">EU</a >&nbsp;Servers</h4>
+            <hr style="height:2px;width:35rem;border-width:0;color:#fafafa;background-color:#fafafa"><br>
+            <img loading="lazy" src="https://cache.gametracker.com/server_info/109.238.14.221:28015/b_560_95_1.png" alt="" width="560" height="95" border="0">&nbsp;<br><br>
+            <a href="steam://connect/eu-grid.planet-rust.com:28015"  class="btn btn-outline-dark" style="width: auto;"><i class="fas fa-network-wired"></i>&nbsp;Connect</a><br>
+            <hr style="height:2px;width:35rem;border-width:0;color:#fafafa;background-color:#fafafa">
+      <br>
+      <img loading="lazy" src="https://cache.gametracker.com/server_info/eu-2x.planet-rust.com:28015/b_560_95_1.png" alt="" width="560" height="95" border="0">&nbsp;<br><br>
+      <a href="steam://connect/eu-2x.planet-rust.com:28015"  class="btn btn-outline-dark" style="width: auto;"><i class="fas fa-network-wired"></i>&nbsp;Connect</a><br>
+            <hr style="height:2px;width:35rem;border-width:0;color:#fafafa;background-color:#fafafa">
+      <br>
+      <img loading="lazy" src="https://cache.gametracker.com/server_info/109.238.14.201:28015/b_560_95_1.png" alt="" width="560" height="95" border="0">&nbsp;<br><br>
+      <a href="steam://connect/eu-10x.planet-rust.com:28015"  class="btn btn-outline-dark" style="width: auto;"><i class="fas fa-network-wired"></i>&nbsp;Connect</a><br>
+            <hr style="height:2px;width:35rem;border-width:0;color:#fafafa;background-color:#fafafa">
+      <br>
+            <<img loading="lazy" src="https://cache.gametracker.com/server_info/109.238.14.221:29015/b_560_95_1.png" alt="" width="560" height="95" border="0">&nbsp;<br><br>
+            <a href="steam://connect/eu-grid.planet-rust.com:29015"  class="btn btn-outline-dark" style="width: auto;"><i class="fas fa-network-wired"></i>&nbsp;Connect</a><br>
+            <hr style="height:2px;width:35rem;border-width:0;color:#fafafa;background-color:#fafafa">
+      <br>
+        </center>
+    </div>
     </div><br><br><br>
   <div class="d-flex flex-wrap justify-content-between align-items-center " style="background-color: #0e141d; padding-top: .5rem;align-items: center; " >
     <div class="col-md-4 d-flex align-items-center">
