--- a/prust.html
+++ b/prust.html
@@ -80,10 +80,10 @@
         <!--! [PR] EU 10x NO-BPs | [Max 8] -->
         <div id="tools">
         <div class="card1 row g-0 position-relative" style="background-color: transparent;" >
-          <div class="col-md-6 mb-md-0 p-md-4">
+          <div class="col-md-6 mb-md-0 p-md-3">
             <img class="prustImg" src="./assets/img/prust/rust-1.gif" class="w-100" alt="...">
           </div>
-          <div class="col-md-6 p-4 ps-md-0 text-light mt-3">
+          <div class="col-md-4 p-4 ps-md-0 text-light mt-1">
             <h5 class="mt-5"><a style="color: #ce422b;">[PR]</a> EU 10x NO-BPs | [Max 8]</h5>
             
               <center>
@@ -96,15 +96,14 @@
               </center>
             <p>
               <br>
-              <!-- <code>This website is not affiliated with Discord</code></p> -->
               <a style="font-size: 1.5vh;">Join our <a class="discord_id" draggable="false" href="https://discord.gg/MpMBG68tGs" target="_blank" style="text-decoration: none; color: #97A9B4; font-weight: bolder;font-size: 1.5vh;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br>
             <a href="steam://connect/eu-10x.planet-rust.com:28015" class="btn btn-outline-dark " style="text-decoration: none;font-size: 1.1vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Connect</a>
             <a href="https://shop.planet-rust.com" class="btn btn-outline-dark" style="text-decoration: none;font-size: 1.1vh;width: 5rem;" target="_blank"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Store</a>
           </div>
         </div>
         <!--! Zap Hosting -->
-        <div class="card1 row g-0 position-relative"style="background-color: transparent;" >
-          <div class="col-md-6 p-4 ps-md-3 text-light mt-2">
+        <div class="card1 row g-0 position-relative"style="background-color: transparent;left:8rem;" >
+          <div class="col-md-4 p-4 ps-md-3 text-light mt-2">
             <h5 class="mt-5"><a style="color: #ce422b;">[PR]</a> US 100x HARDCORE SMALL</h5>
             <center>
               <ul class="list-group list-group-flush" style="width: 20rem;">
@@ -115,7 +114,6 @@
                 </ul>
             </center>
             <p>
-              <!-- <code>Zap-Hosting is trusted by 100,000's of customers</code></p> -->
               <a style="font-size: 1.5vh;">Join our <a class="discord_id" draggable="false" href="https://discord.gg/MpMBG68tGs" target="_blank" style="text-decoration: none; color: #97A9B4; font-weight: bolder;font-size: 1.5vh;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br>
             <a href="steam://connect/us-grid.planet-rust.com:29015" class="btn btn-outline-dark" style="text-decoration: none;font-size: 1.1vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Connect</a>
             <a href="https://shop.planet-rust.com" class="btn btn-outline-dark" style="text-decoration: none;font-size: 1.1vh;width: 5rem;" target="_blank"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Store</a>
@@ -128,7 +126,7 @@
           <div class="col-md-6 mb-md-0 p-md-4">
             <img class="prustImg" src="./assets/img/prust/rust-3.jpg" class="w-100" alt="...">
           </div>
-          <div class="col-md-6 p-4 ps-md-0 text-light mt-3">
+          <div class="col-md-4 p-4 ps-md-0 text-light mt-3">
             <h5 class="mt-5"><a style="color: #ce422b;">[PR]</a> US 2x Main</h5>
             
               <center>
@@ -139,7 +137,6 @@
                   <li class="list-group-item">2800 Map Size</li>
                   </ul>
               </center> 
-              <!-- <p><code>Visual Studio Code is recommended by millions of developers</code></p> -->
             <a style="font-size: 1.5vh;">Join our <a class="discord_id" draggable="false" href="https://discord.gg/MpMBG68tGs"  target="_blank" style="text-decoration: none; color: #97A9B4; font-weight: bolder;font-size: 1.5vh;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br>
             <a href="steam://connect/us-2x.planet-rust.com:28015" class="btn btn-outline-dark" style="text-decoration: none;font-size: 1.1vh;width: 5rem;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Connect</a>
             <a href="https://shop.planet-rust.com" class="btn btn-outline-dark" style="text-decoration: none;font-size: 1.1vh;width: 5rem;" target="_blank"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Store</a>
