--- a/prust.html
+++ b/prust.html
@@ -15,7 +15,8 @@
       <meta name="twitter:creator" content="@jokerxtd"/>
       <meta name="twitter:title" content="Voltic Development | Planet Rust" />
       <meta name="twitter:description" content="Planet Rust the Top quality, perfectly modified servers & Vanilla-Type, Bringing the best experience for Rust,  With active staff to assist with any questions you have. Come and check us out today!"/>
-      <meta name="og:image" content="https://cdn.mythbot.org/img/dev_edph88hb.png" />
+      <!-- <meta name="og:image" content="https://cdn.mythbot.org/img/dev_edph88hb.png" /> -->
+      <meta property="twitter:image" content="https://cdn.mythbot.org/img/dev_edph88hb.png"/>
       <meta name="theme-color" content="#36393E">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
