major updated added new discord.html (`redirect`), added 404.html (`404 error`)

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <li><a href="/" class="nav-link px-2 secondary" ><i style="color: #8e9629;"  class="fas fa-house-user"></i>&nbsp;Home</a></li>
         <li><a href="https://github.com/Voltic-Development" class="nav-link px-2 secondary" target="_blank"><i style="color: #fafafa;"  class="bi bi-github"></i>&nbsp;Github</a></li>
         <li><a href="./projects.html" class="nav-link px-2 secondary"><i class="fas fa-project-diagram" style="color: #6b3434;"></i>&nbsp;Projects</a></li>
-        <li><a href="https://discord.gg/Q6ZSW63Fpw" class="nav-link px-2 secondary" target="_blank"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;Discord</a></li>
+        <li><a href="./discord.html" class="nav-link px-2 secondary" target="_blank"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;Discord</a></li>
         <li><a href="./tools.html" class="nav-link px-2 secondary" ><i style="color: #7289DA;"  class="bi bi-tools"></i>&nbsp;Tools</a></li>
         <li><a href="./store.html" class="nav-link px-2 secondary"><i class="fas fa-store" style="color: #1c7723;"></i>&nbsp;Store</a></li>
         <li><a href="./prust.html" class="nav-link px-2 secondary"><i class="fas fa-globe" style="color: #ce422b;"></i>&nbsp;Planet Rust</a></li>
@@ -65,8 +65,8 @@
     <center><img class="logoImg" src="./assets/img/vlogot.png" draggable="false" alt="vdlogo" style="text-align: center;"></center>
             <h2 style="text-decoration: none; color: #7289DA; font-size: 2rem;  color: #97A9B4;text-align: center;">Voltic Development</h2><br>
         <p class="headerTitle" style="font-size: 1rem;"> 
-            Welcome to our new website. We hope you find what you are looking for, In the mean time <br>Join our <a class="discord_id" draggable="false" href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br><br>
-            <a href="https://www.mythbot.org/discord" class="btn6 btn-outline-dark" target="_blank" style="padding: 5px 25px 5px 25px;"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;Discord</a>
+            Welcome to our new website. We hope you find what you are looking for, In the mean time <br>Join our <a class="discord_id" draggable="false" href="./discord.html" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br><br>
+            <a href="./discord.html" class="btn6 btn-outline-dark" target="_blank" style="padding: 5px 25px 5px 25px;"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;Discord</a>
             <a href="./store.html" class="btn6 btn-outline-dark" target="_blank" style="padding: 5px 25px 5px 25px;"><i class="fas fa-store" style="color: #1c7723;"></i>&nbsp;Store</a><br>
         </p><br>
         
@@ -78,7 +78,7 @@
               <p>We are recruiting! <br><a draggable="false" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" >&nbsp;<i class="fas fa-smile-wink" style="color: #7289DA;"></i></i>&nbsp;Hover Here </a> </p>
             </div>
             <div class="flip-card-back" style="text-decoration: none; color: #97A9B4; font-weight: bolder;">
-              We are currently looking for members to join our Staff Team<br> Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more information
+              We are currently looking for members to join our Staff Team<br> Join our <a href="./discord.html" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more information
             </div>
           </div>
         </div>
@@ -94,10 +94,10 @@
                 <!-- <center><img class="staffImg" src="./assets/img/staff/joker.gif" > </img></center><br> -->
                 <center><img class="staffImg" id="joker_avatar" src="https://cdn.discordapp.com/avatars/116730818822537225/a_8e5fad610c822f5ecb4721066bb9ab97.gif"></img></center><br><br><br>
                 <h5><a  style="text-decoration: none; color: #7289DA; font-weight: bolder;" >CEO / Lead Developer</a> </h5>
-                <p class="card-text" href="https://discord.com/users/116730818822537225" style="color: #fafafa;">I am always looking to learn new things! It is all about the&nbsp;<a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Experience</a></p><br>
+                <p class="card-text" href="https://discord.com/users/116730818822537225" style="color: #fafafa;">I am always looking to learn new things! It is all about the&nbsp;<a href="./discord.html" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Experience</a></p><br>
                 <a href="https://joker.is-a.dev" class="btn btn-outline-dark"><i class="fas fa-home" style="color: #6b3434;"></i>&nbsp;</a>
                 <a href="https://github.com/jokerxtd" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-github"></i>&nbsp;</a>
-                <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
+                <a href="./discord.html" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
                 <a href="https://twitter.com/JoKeRxHD" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="bi bi-twitter"></i>&nbsp;</a>
                 <a href="https://api.mythbot.org" class="btn btn-outline-dark"><i style="color: #6b3434;" class="fas fa-eye"></i>&nbsp;</a><br>
               </div>
@@ -154,7 +154,7 @@
            </div>
           </center>
         <div class="header"style="text-decoration: none;">
-          <h4>Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;text" >Discord</a> </h4>
+          <h4>Join our <a href="./discord.html" style="text-decoration: none; color: #7289DA; font-weight: bolder;text" >Discord</a> </h4>
         </div>
         <div class="discordWidget">
           <iframe src="https://dev.diswidgets.org/widgets/nyX9FL7SImD6tE4pWe" width="500" height="750" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
@@ -172,7 +172,7 @@
   </div>
 
   <ul class="col-md-4 justify-content-end list-unstyled d-flex">
-    <li class="btn2 btn-outline-dark"><a class="text-muted" href="https://discord.gg/Q6ZSW63Fpw"><i class="bi bi-discord"></i></a></li>
+    <li class="btn2 btn-outline-dark"><a class="text-muted" href="./discord.html"><i class="bi bi-discord"></i></a></li>
     <li class="btn2 btn-outline-dark"><a class="text-muted" href="https://twitter.com/JoKeRxHD"><i class="fab fa-twitter"></i></a></li>
     <li class="btn2 btn-outline-dark"><a class="text-muted" href="https://github.com/JoKeRxTD"><i class="bi bi-github"></i></a></li>
     <svg class="bi" width="30" height="24"><use xlink:href="/"></use></svg>
