--- a/store.html
+++ b/store.html
@@ -53,7 +53,7 @@
         <li><a href="/" class="nav-link px-2 secondary" ><i style="color: #8e9629;"  class="fas fa-house-user"></i>&nbsp;Home</a></li>
         <li><a href="https://github.com/Voltic-Development" class="nav-link px-2 secondary" target="_blank"><i style="color: #fafafa;"  class="bi bi-github"></i>&nbsp;Github</a></li>
         <li><a href="./projects.html" class="nav-link px-2 secondary"><i class="fas fa-project-diagram" style="color: #6b3434;"></i>&nbsp;Projects</a></li>
-        <li><a href="https://discord.gg/Q6ZSW63Fpw" class="nav-link px-2 secondary" target="_blank"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;Discord</a></li>
+        <li><a href="./discord.html" class="nav-link px-2 secondary" target="_blank"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;Discord</a></li>
         <li><a href="./tools.html" class="nav-link px-2 secondary" ><i style="color: #7289DA;"  class="bi bi-tools"></i>&nbsp;Tools</a></li>
         <li><a href="./store.html" class="nav-link px-2 secondary"><i class="fas fa-store" style="color: #1c7723;"></i>&nbsp;Store</a></li>
         <li><a href="./prust.html" class="nav-link px-2 secondary"><i class="fas fa-globe" style="color: #ce422b;"></i>&nbsp;Planet Rust</a></li>
@@ -73,7 +73,7 @@
             <p>Have a custom request? <br><a draggable="false" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" >&nbsp;<i class="fas fa-smile-wink" style="color: #7289DA;"></i></i>&nbsp;Hover Here </a> </p>
           </div>
           <div class="flip-card-back" style="text-decoration: none; color: #97A9B4; font-weight: bolder;">
-            <br> Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more information
+            <br> Join our <a href="./discord.html" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more information
           </div>
         </div>
       </div>
@@ -252,7 +252,7 @@
     </div>
 
     <ul class="col-md-4 justify-content-end list-unstyled d-flex">
-      <li class="btn2 btn-outline-dark"><a class="text-muted" href="https://discord.gg/Q6ZSW63Fpw"><i class="fab fa-discord"></i></a></li>
+      <li class="btn2 btn-outline-dark"><a class="text-muted" href="./discord.html"><i class="fab fa-discord"></i></a></li>
       <li class="btn2 btn-outline-dark"><a class="text-muted" href="https://twitter.com/JoKeRxHD"><i class="fab fa-twitter"></i></a></li>
       <li class="btn2 btn-outline-dark"><a class="text-muted" href="https://github.com/JoKeRxTD"><i class="fab fa-github"></i></a></li>
       <svg class="bi" width="30" height="24"><use xlink:href="/"></use></svg>
